reports: week 1,2,3,4 4 flask api, ideas,...

--- a/docs/handout.ipynb
+++ b/docs/handout.ipynb
@@ -10,12 +10,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34c19e32",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "81c19810",
    "metadata": {},
    "source": [
@@ -30,6 +24,23 @@
     "    - Phương pháp triển khai mô hình, sử dụng các mô hình có sẵn\n",
     "    - Đánh giá, xuất dữ liệu\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "133fd6e3",
+   "metadata": {},
+   "source": [
+    "### **Hướng thực hiện:**  \n",
+    "**Tuần 1 - 2: Xác định đề tài,cấu trúc mã nguồn, Yolov8**\n",
+    "\n",
+    "**Tuần 3 - 4: views, phân tích không gian và mật độ phương tiện**\n",
+    "\n",
+    "* **Mục tiêu:** Từ các phương tiện đã được nhận diện, mục tiêu của giai đoạn này là trích xuất hai thông tin chiều sâu quan trọng: **hướng di chuyển tương đối** của từng xe và **mật độ giao thông** tổng thể trong khung hình, xác định vùng đường.\n",
+    "\n",
+    "**Tuần 5 - 6: Xây dựng pipeline, hoàn thiện logic đánh giá**\n",
+    "\n",
+    "---"
    ]
   },
   {
