--- a/weekly_report/week3_4/test.ipynb
+++ b/weekly_report/week3_4/test.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b2729aef",
    "metadata": {},
    "outputs": [
@@ -197,17 +197,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Saved 20251107_150939.jpg (266, 406, 3)\n",
-      "✅ Saved 20251107_150954.jpg (266, 406, 3)\n",
-      "✅ Saved 20251107_151009.jpg (266, 406, 3)\n",
-      "✅ Saved 20251107_151025.jpg (266, 406, 3)\n",
-      "✅ Saved 20251107_151040.jpg (266, 406, 3)\n",
-      "✅ Saved 20251107_151055.jpg (266, 406, 3)\n",
-      "✅ Saved 20251107_151110.jpg (266, 406, 3)\n",
-      "✅ Saved 20251107_151125.jpg (266, 406, 3)\n",
-      "✅ Saved 20251107_151140.jpg (266, 406, 3)\n",
-      "✅ Saved 20251107_151156.jpg (266, 406, 3)\n",
-      "✅ Saved 20251107_151211.jpg (266, 406, 3)\n"
+      "✅ Saved 20251112_123257.jpg (266, 406, 3)\n",
+      "✅ Saved 20251112_123312.jpg (266, 406, 3)\n",
+      "✅ Saved 20251112_123328.jpg (266, 406, 3)\n",
+      "✅ Saved 20251112_123343.jpg (266, 406, 3)\n",
+      "✅ Saved 20251112_123359.jpg (266, 406, 3)\n",
+      "✅ Saved 20251112_123414.jpg (266, 406, 3)\n",
+      "✅ Saved 20251112_123429.jpg (266, 406, 3)\n",
+      "✅ Saved 20251112_123445.jpg (266, 406, 3)\n",
+      "✅ Saved 20251112_123500.jpg (266, 406, 3)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 49\u001b[39m\n\u001b[32m     47\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     48\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m⚠️ HTTP \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mr.status_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m49\u001b[39m \u001b[43mtime\u001b[49m\u001b[43m.\u001b[49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m15\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
